Use Map<String, Object> for ES objects